# TradingSystem

./: Administrator.cpp  Administrator.h  Buyers.cpp  Buyers.h  CMakeLists.txt  Calculator.cpp  Calculator.h  ChatRoom.cpp  ChatRoom.h  InfoManager.cpp  InfoManager.h  MainWindow.cpp  MainWindow.h  README.md  Sellers.cpp  Sellers.h  SqlHelper.cpp  SqlHelper.h  Users.cpp  Users.h  common.h  main.cpp  makefile
ppt/: Pro1_w1.pptx  Pro1_w2.pptx  README.md
